#Source files grouped by a directory
GET_SOURCE_FILES(TEMP_SOURCES)
SET ( SOURCES ${TEMP_SOURCES})

GET_SOURCE_FILES(TEMP_SOURCES VecMeshItems)
SET ( SOURCES ${SOURCES} ${TEMP_SOURCES})

GET_SOURCE_FILES(TEMP_SOURCES MeshItemWiseTask)
SET ( SOURCES ${SOURCES} ${TEMP_SOURCES})

GET_SOURCE_FILES(TEMP_SOURCES Interface)
SET ( SOURCES ${SOURCES} ${TEMP_SOURCES})

GET_SOURCE_FILES(TEMP_SOURCES Serial)
SET ( SOURCES ${SOURCES} ${TEMP_SOURCES})

INCLUDE_DIRECTORIES (
	.
	..
	../BaseLib
	../MathLib
	../GeoLib
	../MeshLib
)


# Create the library
ADD_LIBRARY( VecMatOnMeshLib STATIC ${SOURCES} )

SET_TARGET_PROPERTIES(VecMatOnMeshLib PROPERTIES LINKER_LANGUAGE CXX)

TARGET_LINK_LIBRARIES ( VecMatOnMeshLib 
	GeoLib
	MathLib
	MeshLib
)

